<resources>
    <!-- shared preferences keys -->
    <string name="saved_num_stories_keys">NUMBER_OF_STORIES</string>
    <string name="saved_stories">SAVED_STORIES</string>
    <string name="serial_id">SERIAL ID</string>

    <!-- main activity -->
    <string name="app_name">storywell</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tap_anywhere">tap anywhere</string>
    <string name="to_start_your_story">to start your story</string>

    <!-- story editor activity -->
    <string name="update">update</string>

    <!-- create new story fragment -->
    <string name="create_new_story">create new story</string>
    <string name="enter_a_name_for_this_story">ENTER A NAME FOR THIS STORY</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>

    <!-- change story name fragment -->
    <string name="change_story_name">change story name</string>
    <string name="enter_a_new_name">ENTER A NEW NAME</string>
    <string name="change">change</string>

    <!-- choose a template fragment -->
    <string name="choose_a_template">choose a template</string>
    <string name="c01">c01</string>
    <string name="c02">c02</string>
    <string name="c03">c03</string>
    <string name="c04">c04</string>

    <!-- save story fragment -->
    <string name="save">save</string>
    <string name="individual_story">individual story</string>
    <string name="or">or </string>
    <string name="entire_stories">entire stories</string>
    <string name="story">story</string>
    <string name="stories">stories</string>
    <string name="share_story_to_instagram">share story to instagram</string>
    <string name="save_image">save image</string>

    <!-- template fragments -->
    <string name="add_title">add title</string>
    <string name="tap_to_add_text">tap to add text to tell your story here in this space</string>
    <string name="tip">tip: try to stay in this box so your text doesn\'t overlap the IG stories footer</string>

    <!-- starter kits fragments -->
    <string name="starter_kit_for">starter kit for brands and businesses</string>
    <string name="preview">PREVIEW</string>
    <string name="buy">BUY $1.99</string>

    <!-- select order fragment -->
    <string name="tap_to_select_order">tap to select order</string>
    <string name="of_your_stories">of your stories, then tap update</string>

    <!-- text sticker editor -->
    <string name="family">family</string>
    <string name="size">size</string>
    <string name="spacing">spacing</string>
    <string name="height">height</string>
    <string name="book">Book</string>
    <string name="light">Light</string>
    <string name="sans_bold">Sans Bold</string>
    <string name="serif_italic">Serif Italic</string>
</resources>
