<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bronze_border"
    android:padding="10dp">
    <TextView
        android:id="@+id/text_view_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorDarkGrey"/>
    <TextView
        android:id="@+id/text_view_individual_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_story"
        android:layout_below="@+id/text_view_save"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorDarkGrey"/>
    <TextView
        android:id="@+id/text_view_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@+id/text_view_individual_story"
        android:layout_alignLeft="@+id/text_view_individual_story"
        android:textColor="@color/colorDarkGrey"/>
    <TextView
        android:id="@+id/text_view_entire_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entire_stories"
        android:layout_below="@+id/text_view_individual_story"
        android:layout_toRightOf="@+id/text_view_or"
        android:textColor="@color/colorDarkGrey"/>
    <Button
        android:id="@+id/button_save_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story"
        android:layout_below="@id/edit_text_enter_a_name"
        android:layout_alignStart="@+id/button_share_story_to_instagram"
        android:layout_above="@+id/button_share_story_to_instagram"
        android:background="@drawable/bronze_border"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/button_save_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        android:layout_below="@id/edit_text_enter_a_name"
        android:layout_alignEnd="@+id/button_share_story_to_instagram"
        android:layout_above="@+id/button_share_story_to_instagram"
        android:background="@drawable/bronze_border"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/button_share_story_to_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_story_to_instagram"
        android:layout_below="@id/edit_text_enter_a_name"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bronze_border"/>
</RelativeLayout>