<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorGrey">
        <SeekBar
            android:id="@+id/seek_bar_text_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:thumb="@drawable/bronze_circle"
            android:thumbTint="@color/colorBronze"
            android:progressDrawable="@drawable/bronze_dashed_line"/>
        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view_font_family_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linear_layout_font_family_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/text_view_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:fontFamily="@font/franklingothic_book"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/text_view_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:fontFamily="@font/freight_big_w01_light_regular"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/text_view_sans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sans_bold"
                    android:fontFamily="@font/franklingothic_med"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/text_view_serif_italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serif_italic"
                    android:fontFamily="@font/freight_big_w01_book_italic"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </HorizontalScrollView>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:id="@+id/linear_layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorOffWhite"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_top_bar"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/text_view_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/freight_big_w01_black_italic"/>
        <TextView
            android:id="@+id/text_view_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/freight_big_w01_black_italic"/>
        <TextView
            android:id="@+id/text_view_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacing"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/freight_big_w01_black_italic"/>
        <TextView
            android:id="@+id/text_view_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/freight_big_w01_black_italic"/>
        <ImageView
            android:id="@+id/image_view_text_alignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/align_left"
            android:layout_margin="10dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>