<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite">
    <TextView
        android:id="@+id/text_view_choose_a_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/image_view_x-icon"
        android:textColor="@color/colorDarkGrey"
        android:text="@string/choose_a_template"
        android:background="@color/colorOffWhite"/>
    <ImageView
        android:id="@+id/image_view_x-icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/x_icon"
        android:layout_alignParentRight="true"
        android:background="@color/colorOffWhite"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorOffWhite">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorOffWhite">
            <Button
                android:id="@+id/button_c01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c01"
                android:background="@color/colorBronze"/>
            <Button
                android:id="@+id/button_c02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c02"
                android:background="@color/colorBronze"/>
            <Button
                android:id="@+id/button_c03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c03"
                android:background="@color/colorBronze"/>
        </ListView>
    </LinearLayout>
</RelativeLayout>