<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    android:id="@+id/constraint_layout_choose_a_template"
    android:layout_marginTop="?attr/actionBarSize">
    <TextView
        android:id="@+id/text_view_choose_a_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_template"
        android:fontFamily="@font/freight_big_w01_sb_italic"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_x_icon"/>
    <ImageView
        android:id="@+id/image_view_x_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/x_icon"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="15dp" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/image_view_shopping_cart_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/shopping_cart_icon"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/button_c01"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/colorC01"
                android:text="@string/c01"
                android:layout_margin="8dp"
                android:fontFamily="@font/freight_big_w01_bold_regular"
                android:textSize="18dp"/>
            <Button
                android:id="@+id/button_c02"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/colorC02"
                android:text="@string/c02"
                android:layout_margin="8dp"
                android:fontFamily="@font/freight_big_w01_bold_regular"
                android:textSize="18dp"/>
            <Button
                android:id="@+id/button_c03"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/colorC03"
                android:text="@string/c03"
                android:layout_margin="8dp"
                android:fontFamily="@font/freight_big_w01_bold_regular"
                android:textSize="18dp"/>
            <Button
                android:id="@+id/button_c04"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/colorC04"
                android:text="@string/c04"
                android:layout_margin="8dp"
                android:fontFamily="@font/freight_big_w01_bold_regular"
                android:textSize="18dp"/>
        </LinearLayout>
    </HorizontalScrollView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_templates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_view_choose_a_template"
        android:layout_gravity="center"/>
    <FrameLayout
        android:id="@+id/frame_layout_fragment_placeholder_choose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</android.support.constraint.ConstraintLayout>