<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StarterKitsFragment">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_c01"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPeach"
        android:padding="15dp">
        <TextView
            android:id="@+id/text_view_c01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c01"
            android:fontFamily="@font/freight_big_w01_bold_regular"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@id/text_view_c01_starter_kit_for"/>
        <TextView
            android:id="@+id/text_view_c01_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c01_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c01_starter_kit_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_kit_for"
            app:layout_constraintBottom_toTopOf="@id/text_view_c01_preview"
            android:fontFamily="@font/freight_big_w01_medium_italic"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_c02"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorC02"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_c01">
        <TextView
            android:id="@+id/text_view_c02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c02"
            android:fontFamily="@font/freight_big_w01_bold_regular"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@id/text_view_c02_starter_kit_for"/>
        <TextView
            android:id="@+id/text_view_c02_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c02_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c02_starter_kit_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_kit_for"
            app:layout_constraintBottom_toTopOf="@id/text_view_c02_preview"
            android:fontFamily="@font/freight_big_w01_medium_italic"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_c03"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorC03"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_c02">
        <TextView
            android:id="@+id/text_view_c03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c02"
            android:fontFamily="@font/freight_big_w01_bold_regular"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@id/text_view_c03_starter_kit_for"/>
        <TextView
            android:id="@+id/text_view_c03_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c03_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/franklingothic_book"/>
        <TextView
            android:id="@+id/text_view_c03_starter_kit_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_kit_for"
            app:layout_constraintBottom_toTopOf="@id/text_view_c03_preview"
            android:fontFamily="@font/freight_big_w01_medium_italic"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorYellow"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/constraint_layout_c03"/>
</android.support.constraint.ConstraintLayout>