<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_layout_template5_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".free_templates.Template5Fragment"
    android:background="@color/colorPeach">
    <ImageView
        android:id="@+id/image_view_template5_media"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorGrey" />
    <ImageView
        android:id="@+id/image_view_template5_add_media"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@id/image_view_template5_media"
        app:layout_constraintRight_toRightOf="@id/image_view_template5_media"
        app:layout_constraintBottom_toBottomOf="@id/image_view_template5_media"
        app:layout_constraintTop_toTopOf="@id/image_view_template5_media"
        android:src="@drawable/add_story_icon"/>
    <ImageView
        android:id="@+id/image_view_template5_remove_media"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/x_icon"
        app:layout_constraintEnd_toEndOf="@id/image_view_template5_media"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_template5_text_container"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="15dp">
        <EditText
            android:id="@+id/edit_text_template5_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <EditText
            android:id="@+id/edit_text_template5_tap_to_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_add_text"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_template5_add_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <EditText
            android:id="@+id/edit_text_template5_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_template5_tap_to_add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:id="@+id/image_view_template5_color_picker"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/three_circles_icon"
        app:layout_constraintTop_toBottomOf="@id/image_view_template5_media"
        app:layout_constraintLeft_toRightOf="@id/constraint_layout_template5_text_container"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/colorWhite"
        app:layout_constraintCircleRadius="50dp"/>
</android.support.constraint.ConstraintLayout>